--- a/home/templates/home/leaderboard.html
+++ b/home/templates/home/leaderboard.html
@@ -1,46 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ quiz.name }} - Leaderboard</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            padding: 0;
-        }
-        table{
-            width: 50%;
-            border: 1px solid;
-        }
-        th, td{
-            padding: 15px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-        .container {
-            text-align: center;
-        }
-        h2 {
-            color: #333;
-        }
-        p {
-            font-size: 1.2em;
-        }
-        button {
-            background-color:rgb(35, 42, 130);
-            color: white;
-            padding: 5px 13px;
-            border: none;
-            cursor: pointer;
-            font-size: 1.2em;
-        }
-        button:hover {
-            background-color:rgb(47, 190, 185);
-            color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/leaderboard.css' %}">
+    
 </head>
 <body>
     <h2>{{ quiz.name }} - Leaderboard</h2>
