--- a/home/templates/home/quiz_limit_reached.html
+++ b/home/templates/home/quiz_limit_reached.html
@@ -1,43 +1,18 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ quiz.name }} - Max Attempts Reached</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            padding: 0;
-        }
-        .container {
-            text-align: center;
-        }
-        h2 {
-            color: #333;
-        }
-        p {
-            font-size: 1.2em;
-        }
-        button {
-            background-color:rgb(35, 42, 130);
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-            font-size: 1.2em;
-        }
-        button:hover {
-            background-color:rgb(47, 190, 185);
-            color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/quiz_limit_reached.css' %}">
 </head>
 <body>
     <h2>{{ quiz.name }}</h2>
     <p>You have already completed the maximum allowed attempts for this quiz.</p>
     <p>You can take up other quizzes.</p>
-    
+
     <a href="{% url 'quiz_list' %}">
         <button>Go Back to Quiz List</button>
     </a>
