--- a/home/templates/home/quiz_list.html
+++ b/home/templates/home/quiz_list.html
@@ -1,42 +1,28 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>Available Quizzes</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            padding: 0;
-        }
-        .container {
-            text-align: center;
-        }
-        h2 {
-            color: #333;
-        }
-        p {
-            font-size: 1.2em;
-        }
-        button {
-            background-color:rgb(35, 42, 130);
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-            font-size: 1.2em;
-        }
-        button:hover {
-            background-color:rgb(47, 190, 185);
-            color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/quiz_list.css' %}">
 </head>
 <body>
     <h2>Available Quizzes</h2>
+
+    {% if messages %}
+        <div class="messages">
+            {% for message in messages %}
+                <div class="message">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
+
     <ul>
         {% for quiz in quizzes %}
             <li>
-                <h3><a href="{% url 'quiz_detail' quiz.id %}">{{ quiz.name }}</a></h3>
+                <h3><a href="{% url 'quiz_take_up' quiz.id %}">{{ quiz.name }}</a></h3>
                 <p>{{ quiz.description }}</p>
             </li>
 
@@ -52,6 +38,3 @@
     <button class="btn" onclick="window.location.href='{% url 'sign_out' %}'">Sign Out</button>
 </body>
 </html>
-<ul>
-    
-    
