--- a/home/templates/home/quiz_result.html
+++ b/home/templates/home/quiz_result.html
@@ -1,44 +1,35 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ quiz.name }} - Result</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            padding: 0;
-        }
-        .container {
-            text-align: center;
-        }
-        h2 {
-            color: #333;
-        }
-        p {
-            font-size: 1.2em;
-        }
-        button {
-            background-color:rgb(35, 42, 130);
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-            font-size: 1.2em;
-        }
-        button:hover {
-            background-color:rgb(47, 190, 185);
-            color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/quiz_result.css' %}">
 </head>
 <body>
     <h2>{{ quiz.name }} - Your Result</h2>
     <p>Your score: {{ score }}</p>
     <p>Attempt Number: {{ attempt_number }} / {{ quiz.max_attempts }}</p>
+
+    {% if max_attempts_reached %}
+        <p>You have reached the maximum number of attempts for this quiz.</p>
+    {% endif %}
+
+    {% if messages %}
+        <div class="messages">
+            {% for message in messages %}
+                <div class="message">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
+
     <a href="{% url 'quiz_list' %}">
         <button>Go Back to Quiz List</button>
     </a>
 </body>
 </html>
+
