--- a/home/templates/home/register.html
+++ b/home/templates/home/register.html
@@ -1,39 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <title>Register</title>
-        <style>
-            body {
-                display: flex;
-                justify-content : center;
-                align-items: center;
-                font-family: Arial, sans-serif;
-                margin: 20px;
-                padding: 0;
-            }
-            .container {
-                text-align: center;
-            }
-            h2 {
-                color: #333;
-            }
-            p {
-                font-size: 1.2em;
-            }
-            button {
-                background-color:rgb(35, 42, 130);
-                color: white;
-                padding: 8px 15px;
-                border: none;
-                cursor: pointer;
-                font-size: 1.2em;
-                position: relative;
-            }
-            button:hover {
-                background-color:rgb(47, 190, 185);
-                color: black;
-            }
-        </style>
+        <link rel="stylesheet" href="{% static 'css/register.css' %}">
     </head>
     <body>
         <form method="POST" action="{% url 'register' %}">
